--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         Sach toh ye hai jaan,<br>
         Dil kab ka haan keh chuka tha ❤️<br>
-        Bas thoda drama zaroori tha 😄<br><br>
+        Bas thoda tadpana zaroori tha 😄<br><br>
 
         So yes…<br>
         Main tumhari Valentine hoon 💖🌹
